--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "7guis",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "https://7guis.github.io/7guis/tasks",
   "source": "src/index.html",
   "browserslist": "defaults",
@@ -33,7 +33,8 @@
   },
   "devDependencies": {
     "npm-check-updates": "^13.0.3",
-    "parcel": "^2.5.0"
+    "parcel": "^2.6.0",
+    "process": "^0.11.10"
   },
   "dependencies": {
     "big.js": "^6.1.1",
