--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
     "vueIndentScriptAndStyle": false
   },
   "devDependencies": {
+    "@types/react": "^18.2.72",
     "npm-check-updates": "^16.14.18",
     "parcel": "^2.12.0",
     "process": "^0.11.10"
   },
   "dependencies": {
-    "big.js": "^6.2.1",
+    "decimal.js": "^10.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
