--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.74",
+    "@types/react-dom": "^18.2.23",
     "npm-check-updates": "^16.14.18",
     "parcel": "^2.12.0",
     "process": "^0.11.10"
