--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "decimal.js": "^10.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
